--- a/html/routes.html
+++ b/html/routes.html
@@ -54,8 +54,8 @@
   <div class="container">
 
     <!-- Page Heading -->
-    <h2 class="my-4">ROUTES</h2>  
-      <h3>Discover Spain through tasting delicious tortillas de patata in different regions</h3>
+    <h2 class="h2_javi" class="my-4">ROUTES</h2>  
+      <h3 class="h3_javi">Discover Spain through tasting delicious tortillas de patata in different regions</h3>
     
 
     <!-- Project One -->
@@ -68,15 +68,15 @@
       </div>
 
       <div class="col-md-5">
-        <h3>A Coruña</h3>
-        <p>A Coruña is a city and municipality of Galicia, Spain. The name is reputedly from the Greek Κορώνα (Crown), referring to the crown of Geryon that was buried by Hercules under the lighthouse he built to his honour. The hero Hercules slew the giant tyrant Geryon after three days and three nights of continuous battle. Hercules then—in a Celtic gesture—buried the head of Geryon with his weapons and ordered that a city be built on the site.
+        <h3 class="h3_javi">A Coruña</h3>
+        <p class="p_javi">A Coruña is a city and municipality of Galicia, Spain. The name is reputedly from the Greek Κορώνα (Crown), referring to the crown of Geryon that was buried by Hercules under the lighthouse he built to his honour. The hero Hercules slew the giant tyrant Geryon after three days and three nights of continuous battle. Hercules then—in a Celtic gesture—buried the head of Geryon with his weapons and ordered that a city be built on the site.
         </p>
         <a class="btn btn-primary" href="https://goo.gl/maps/AkGurBDPaRW7DbBH9" target="_blank"> <i class="fas fa-map-marked-alt"></i> Take me there!</a>
       </div>
     </div>
     <!-- /.row -->
 
-    <hr>
+    <hr class="divider_routes">
 
     <!-- Project Two -->
     <div class="row">
@@ -86,15 +86,15 @@
         </a>
       </div>
       <div class="col-md-5">
-        <h3>San Sebastian</h3>
-        <p>San Sebastián is a coastal city and municipality located in the Basque Autonomous Community, Spain. It lies on the coast of the Bay of Biscay, 20 km (12 miles) from the French border. Locals call themselves donostiarra.
+        <h3 class="h3_javi">San Sebastian</h3>
+        <p class="p_javi">San Sebastián is a coastal city and municipality located in the Basque Autonomous Community, Spain. It lies on the coast of the Bay of Biscay, 20 km (12 miles) from the French border. Locals call themselves donostiarra.
         The main economic activities are commerce and tourism, and it is one of the most famous tourist destinations in Spain. Despite the city's small size, events such as the San Sebastián International Film Festival have given it an international dimension. San Sebastián was the European Capital of Culture in 2016.</p>
         <a class="btn btn-primary" href="https://g.page/barnestor?share" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
       </div>
     </div>
     <!-- /.row -->
 
-    <hr>
+    <hr class="divider_routes">
 
     <!-- Project Three -->
     <div class="row">
@@ -104,14 +104,14 @@
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Pamplona</h3>
-        <p>Pamplona is the capital city of the Autonomous Community of Navarre, in Spain, and historically also of the former Kingdom of Navarre. Pamplona is also the second-largest city in the greater Basque cultural region, composed of two Spanish autonomous communities, Navarre and Basque Country, and the French Basque Country. The city is famous worldwide for the running of the bulls during the San Fermín festival. This festival was brought to literary renown with the 1926 publication of Ernest Hemingway's novel The Sun Also Rises. </p>
+        <h3 class="h3_javi">Pamplona</h3>
+        <p class="p_javi">Pamplona is the capital city of the Autonomous Community of Navarre, in Spain, and historically also of the former Kingdom of Navarre. Pamplona is also the second-largest city in the greater Basque cultural region, composed of two Spanish autonomous communities, Navarre and Basque Country, and the French Basque Country. The city is famous worldwide for the running of the bulls during the San Fermín festival. This festival was brought to literary renown with the 1926 publication of Ernest Hemingway's novel The Sun Also Rises. </p>
         <a class="btn btn-primary" href="https://goo.gl/maps/SCyaQccvGrBe4rNXA" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
       </div>
     </div>
     <!-- /.row -->
 
-    <hr>
+    <hr class="divider_routes">
 
     <!-- Project Four -->
     <div class="row">
@@ -122,14 +122,14 @@
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Madrid</h3>
-        <p>Madrid is the capital and most populous city of Spain. The city has almost 3.3 million inhabitants and a metropolitan area population of approximately 6.5 million. It is the third-largest city in the European Union, surpassed only by London and Berlin. Madrid lies on the River Manzanares in the centre of both the country and the Community of Madrid. As the capital city of Spain, seat of government, and residence of the Spanish monarch, Madrid is also the political, economic and cultural centre of the country.
+        <h3 class="h3_javi">Madrid</h3>
+        <p class="p_javi">Madrid is the capital and most populous city of Spain. The city has almost 3.3 million inhabitants and a metropolitan area population of approximately 6.5 million. It is the third-largest city in the European Union, surpassed only by London and Berlin. Madrid lies on the River Manzanares in the centre of both the country and the Community of Madrid. As the capital city of Spain, seat of government, and residence of the Spanish monarch, Madrid is also the political, economic and cultural centre of the country.
         </p>
         <a class="btn btn-primary" href="https://g.page/bodegaardosa?share" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
       </div>
     </div>
 
-    <hr>
+    <hr class="divider_routes">
 
     <!-- Project Five  -->
     <div class="row">
@@ -140,14 +140,14 @@
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Barcelona</h3>
-        <p>Barcelona is the capital and largest city of the autonomous community of Catalonia. It is one of the largest metropolises on the Mediterranean Sea, located on the coast between the mouths of the rivers Llobregat and Besòs. Barcelona has a rich cultural heritage and is today an important cultural centre and a major tourist destination. Particularly renowned are the architectural works of Antoni Gaudí and Lluís Domènech i Montaner, which have been designated UNESCO World Heritage Sites. The city is known for hosting the 1992 Summer Olympics as well as world-class conferences and expositions. 
+        <h3 class="h3_javi">Barcelona</h3>
+        <p class="p_javi">Barcelona is the capital and largest city of the autonomous community of Catalonia. It is one of the largest metropolises on the Mediterranean Sea, located on the coast between the mouths of the rivers Llobregat and Besòs. Barcelona has a rich cultural heritage and is today an important cultural centre and a major tourist destination. Particularly renowned are the architectural works of Antoni Gaudí and Lluís Domènech i Montaner, which have been designated UNESCO World Heritage Sites. The city is known for hosting the 1992 Summer Olympics as well as world-class conferences and expositions. 
         </p>
         <a class="btn btn-primary" href="https://goo.gl/maps/m65GR7Hn9eKXXF6x6" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
       </div>
     </div>
 
-    <hr>
+    <hr class="divider_routes">
 
     <!-- Project Six  -->
     <div class="row">
@@ -158,14 +158,14 @@
         </a>
       </div>
       <div class="col-md-5">
-        <h3>León</h3>
-        <p>León is the capital of the province of León, located in the northwest of Spain. Founded as the military encampment of the Legio VI Victrix around 29 BC, its standing as an encampment city was consolidated with the definitive settlement of the Legio VII Gemina from 74 AD. In 1188, the city hosted the first Parliament in European history under the reign of Alfonso IX. 
+        <h3 class="h3_javi">León</h3>
+        <p class="p_javi">León is the capital of the province of León, located in the northwest of Spain. Founded as the military encampment of the Legio VI Victrix around 29 BC, its standing as an encampment city was consolidated with the definitive settlement of the Legio VII Gemina from 74 AD. In 1188, the city hosted the first Parliament in European history under the reign of Alfonso IX. 
         </p>
         <a class="btn btn-primary" href="https://goo.gl/maps/Dy3cQg4UxDyn18349" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
       </div>
     </div>
 
-    <hr>
+    <hr class="divider_routes">
 
     <!-- Project Seven  -->
     <div class="row">
@@ -176,8 +176,8 @@
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Huelva</h3>
-        <p>Huelva is the capital of the province of Huelva in the autonomous community of Andalusia. It is located along the Gulf of Cádiz coast. According to the 2010 census, the city had a population of 149,410. It has been tentatively defended the existence of pre-Phoenician settlement on the current urban limits since circa 1250 BC, with Phoenicians establishing a stable colony roughly by the 9th century BC.
+        <h3 class="h3_javi" >Huelva</h3>
+        <p class="p_javi">Huelva is the capital of the province of Huelva in the autonomous community of Andalusia. It is located along the Gulf of Cádiz coast. According to the 2010 census, the city had a population of 149,410. It has been tentatively defended the existence of pre-Phoenician settlement on the current urban limits since circa 1250 BC, with Phoenicians establishing a stable colony roughly by the 9th century BC.
         </p>
         <a class="btn btn-primary" href="https://goo.gl/maps/Z3jWMdEjCvrnuvdbA" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
       </div>
