--- a/html/routes.html
+++ b/html/routes.html
@@ -37,7 +37,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="/index.html">Tortilla Hop <span
+            <a class="nav-item nav-link active" href="/index.html"><i class="fas fa-home"></i> Tortilla Hop <span
                 class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="/html/routes.html"> <i class="fas fa-road"></i> Routes</a>
             <a class="nav-item nav-link" href="/html/recipes.html"><i class="fas fa-utensils"></i> Recipes</a>
