--- a/html/contact.html
+++ b/html/contact.html
@@ -35,7 +35,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="/index.html">Tortilla Hop <span
+            <a class="nav-item nav-link active" href="/index.html"><i class="fas fa-home"></i> Tortilla Hop <span
                 class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="routes.html"><i class="fas fa-road"></i> Routes</a>
             <a class="nav-item nav-link" href="recipes.html"><i class="fas fa-utensils"></i> Recipes</a>
@@ -49,7 +49,7 @@
         <div class="image_contact">
         </div>
         <div class="form_contact"> 
-          
+
         </div> 
 
 
