--- a/html/routes.html
+++ b/html/routes.html
@@ -54,7 +54,7 @@
   <div class="container">
 
     <!-- Page Heading -->
-    <h2 class="h2_javi" class="my-4">ROUTES</h2>  
+    <h2 class="h2_javi" class="my-4">Routes</h2>  
       <h3 class="h3_javi">Discover Spain through tasting delicious tortillas de patata in different regions</h3>
     
 
