--- a/html/contact.html
+++ b/html/contact.html
@@ -73,52 +73,39 @@
     ​
     ​
     ​
+    ​
+    ​
+    ​
+    ​
+    ​
+    ​
+          <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+          <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
+    </body>
+    ​
+    </html>
+    ​
+    ​
+    ​
+    ​
+    ​
+    ​
+    ​
+    ​
+    ​
+    ​
+    ​
 
       
-  <footer class="page-footer font-small special-color-dark pt-4">
-
-    <!-- Footer Elements -->
-    <div class="container">
   
-      <!-- Social buttons -->
-      <ul class="list-unstyled list-inline text-center">
-        <li class="list-inline-item">
-          <a class="btn-floating btn-fb mx-1">
-            <a href="https://es-es.facebook.com/"target="_blank"><i class="fab fa-facebook-f facebook" ></i></a>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-tw mx-1">
-            <a href="https://twitter.com/?lang=es" target="_blank"><i class="fab fa-twitter twitter"></i></a>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-gplus mx-1">
-            <a href="https://www.youtube.com/?hl=es&gl=ES" target="_blank"><i class="fab fa-youtube youtube"></i></a>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-li mx-1">
-            <a href="https://es.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in linkedin"></i></a>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-instagram mx-1">
-            <a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram instagram"></i></a>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-fb mx-1">
-            <a href="https://github.com/" target="_blank"><i class="fab fa-github github"></i></a>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3"><i class="far fa-copyright"></i> <strong>2020 Copyright</strong>
-      <a class="pink" href="https://www.wildcodeschool.com/es-ES" target="_blank"> wildcodeschool.com</a>
-    </div>
-  </footer>
 
 
 
