--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="motto">
-      <h2>Travel from North to South discovering the best tortillas de patata in Spain</h2>
+      <h2 class="h2_index">Travel from North to South discovering the best tortillas de patata in Spain</h2>
     </div>
   </div>
 
