--- a/html/recipes.html
+++ b/html/recipes.html
@@ -49,7 +49,7 @@
 
   <!-- TITLE RECIPES BOX -->
   <div class="recipes_title_subtitle">
-    <h2>Delicious tortillas de patata recipes</h2>
+    <h2 class="h2_recipes">Delicious tortillas de patata recipes</h2>
   </div>
 
   <!-- HORIZONTAL CARDS RECIPES -->
