--- a/html/recipes.html
+++ b/html/recipes.html
@@ -297,9 +297,53 @@
 
 
   </div>
-
-
   </div>
+
+  <!-- FOOTER -->
+  <footer class="page-footer font-small special-color-dark pt-4">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+      <!-- Social buttons -->
+      <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+          <a class="btn-floating btn-fb mx-1">
+            <a href="https://es-es.facebook.com/"target="_blank"><i class="fab fa-facebook-f facebook" ></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-tw mx-1">
+            <a href="https://twitter.com/?lang=es" target="_blank"><i class="fab fa-twitter twitter"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-gplus mx-1">
+            <a href="https://www.youtube.com/?hl=es&gl=ES" target="_blank"><i class="fab fa-youtube youtube"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-li mx-1">
+            <a href="https://es.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in linkedin"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-instagram mx-1">
+            <a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram instagram"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-fb mx-1">
+            <a href="https://github.com/" target="_blank"><i class="fab fa-github github"></i></a>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3"><i class="far fa-copyright"></i> <strong>2020 Copyright</strong>
+      <a class="pink" href="https://www.wildcodeschool.com/es-ES" target="_blank"> wildcodeschool.com</a>
+    </div>
+  </footer>
 
 
   
