--- a/html/contact.html
+++ b/html/contact.html
@@ -62,10 +62,9 @@
 
         <label for="subject">Subject:</label>
         <select id ="subject">
-          <option value="1">Send us your favorite recipe</option>
-          <option value="1">Did you find it out interesting?</option>
-          <option value="1">Any other comment</option>
-
+          <option >Send us your favorite recipe</option>
+          <option >Did you find it out interesting?</option>
+          <option >Any other comment</option >
         </select>
         
         <label for="message">Message:</label>
